--- a/resources/sass/_custom.scss
+++ b/resources/sass/_custom.scss
@@ -19,7 +19,11 @@ li a p{
 }
 
 #navbar {
-    background-color: #f2f2f2;
+    background-color: $navbar;
+}
+
+#sidebar {
+    background-color: #31313D;
 }
 
 #announcementdesc {
@@ -27,22 +31,19 @@ li a p{
     overflow-y: auto;
 }
 
-#preload {
-    box-sizing: border-box;
-    width: 300px;
-    height: 300px;
-    position: fixed;
-    left: 50%;
-    top: 760%;
-    transform: translate(-80%, -30%);
-    z-index: 4;
-    text-align: center;
-    opacity: 0.5;
-}
 /* Custom card Outline */
-  .card-custom-blue.card-outline {
-    border-top: 3px solid #0093F0;
-  }
+.card-custom-blue.card-outline {
+    border-top: 3px solid $custom_blue;
+}
+
+.body-background {
+    background-image: linear-gradient(to right, $primary , $secondary 100%);
+}
+
+.btn-login {
+    color: #fff;
+    background-image: linear-gradient(to right, $primary , $secondary 100%);
+}
 
   @keyframes half-circle-spinner-animation {
     0% {
