--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -18,7 +18,7 @@ $yellow: #ffed4a;
 $green: #38c172;
 $teal: #4dc0b5;
 $cyan: #6cb2eb;
-$navbar: #f2f2f2;
+$navbar: #ffffff;
 $custom_blue: #0093F0;
 
 // Body Background Colors
