--- a/public/css/app.css
+++ b/public/css/app.css
@@ -63,6 +63,13 @@ li a p {
   width: 75%;
 }
 
+/*Custom input for table in Payroll Management*/
+
+.custom-table-input {
+  border: none !important;
+  background-color: transparent !important;
+}
+
 @-webkit-keyframes half-circle-spinner-animation {
   0% {
     -webkit-transform: rotate(0deg);
@@ -123,7 +130,6 @@ li a p {
   #AddNotificationModal {
     overflow: auto !important;
   }
-
 }
 
 /*Login Page Media Queries*/
