--- a/public/css/app.css
+++ b/public/css/app.css
@@ -47,7 +47,7 @@ li a p {
 /* Custom card Outline */
 
 .card-custom-blue.card-outline {
-  border-top: 3px solid #0A3873;
+  border-top: 3px solid #129D9E;
 }
 
 .body-background {
