--- a/resources/sass/_custom.scss
+++ b/resources/sass/_custom.scss
@@ -41,7 +41,7 @@ li a p{
 
 /* Custom card Outline */
 .card-custom-blue.card-outline {
-    border-top: 3px solid $primary;
+    border-top: 3px solid $outline-color;
 }
 
 .body-background {
