--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -20,6 +20,7 @@ $teal: #4dc0b5;
 $cyan: #6cb2eb;
 $navbar: #ffffff;
 $custom_blue: #0093F0;
+$outline-color: #129D9E;
 
 // Body Background Colors
 
