Create/Edit Employee UI Improvements

--- a/resources/sass/_custom.scss
+++ b/resources/sass/_custom.scss
@@ -60,7 +60,24 @@ li a p{
 #ess_logo {
     width: 75%;
 }
+// Input Design 
+/*
+.input-group-prepend {
+    display:none !important;
+}
+.form-control  {
+  border: 0.5px solid rgb(98, 97, 97) !important;
+  border-radius: 0 !important;
 
+}
+.form-control::placeholder{
+    font-size: 15px;
+    color:black;
+}
+label {
+    text-decoration: none !important;
+}
+*/
 /*Custom input for table in Payroll Management*/
 .custom-table-input {
     border: none !important;
