--- a/resources/sass/_custom.scss
+++ b/resources/sass/_custom.scss
@@ -78,6 +78,23 @@ label {
     text-decoration: none !important;
 }
 */
+/**
+* Error Pages
+**/
+.error-page-message {
+    margin-right: 25px; 
+    font-family: $font-family-sans-serif; 
+    font-weight: bold; 
+    color: $secondary;
+}
+
+.error-page-status {
+    margin-right: 25px;
+    font-family: $font-family-sans-serif; 
+    font-size: 60px;
+}
+
+
 /*Custom input for table in Payroll Management*/
 .custom-table-input {
     border: none !important;
