--- a/public/css/app.css
+++ b/public/css/app.css
@@ -109,6 +109,38 @@ label {
   background-color: transparent !important;
 }
 
+/**
+* @ Custom Flat Design Design
+**/
+
+.custom-flat-input {
+  outline: 0 !important;
+  background: #f2f2f2 !important;
+  width: 100% !important;
+  border: 0 !important;
+  margin: 0 0 5px !important;
+  padding: 15px !important;
+  box-sizing: border-box !important;
+  font-size: 14px !important;
+  line-height: 1.2;
+}
+
+.custom-flat-input-error {
+  border: 1 !important;
+  border-color: #e3342f !important;
+}
+
+.btn-custom-flat {
+  margin-top: -25px;
+  border-radius: 3px !important;
+}
+
+.custom-flat-label {
+  font-size: 16px !important;
+  color: #555 !important;
+  text-transform: capitalize !important;
+}
+
 @-webkit-keyframes half-circle-spinner-animation {
   0% {
     -webkit-transform: rotate(0deg);
