--- a/resources/sass/_custom.scss
+++ b/resources/sass/_custom.scss
@@ -101,6 +101,41 @@ label {
     background-color: transparent !important;
 }
 
+/**
+* @ Custom Flat Design Design
+**/
+.custom-flat-input {
+    //background-color: #000;
+    //font-family: "Roboto", sans-serif;
+    outline: 0 !important;
+    background: $input-background !important;
+    width: 100% !important;
+    border: 0 !important;
+    margin: 0 0 5px !important;
+    padding: 15px !important;
+    box-sizing: border-box !important;
+    font-size: 14px !important;
+    //border-radius: 25px !important;
+    line-height: 1.2;
+}
+
+.custom-flat-input-error {
+    border: 1 !important;
+    border-color: $red !important;
+}
+
+.btn-custom-flat{
+    margin-top: -25px;
+    border-radius: 3px !important;
+}
+
+.custom-flat-label {
+    font-size: 16px !important;
+    color: $cutom-flat-label !important;
+    text-transform: capitalize !important;
+}
+
+
 @keyframes half-circle-spinner-animation {
     0% {
       transform: rotate(0deg);
