--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -26,3 +26,8 @@ $outline-color: #129D9E;
 
 $primary: #0A3873;
 $secondary: #129D9E;
+
+
+// Custom Flat input
+$input-background: #f2f2f2;
+$cutom-flat-label: #555;
