--- a/resources/sass/_custom.scss
+++ b/resources/sass/_custom.scss
@@ -119,9 +119,37 @@ label {
     line-height: 1.2;
 }
 
+.custom-flat-select {
+    outline: 0 !important;
+    background: $input-background !important;
+    width: 100% !important;
+    height: 50px !important;
+    border: 0 !important;
+    margin: 0px 0 12px 0 !important;
+    //padding: 15px !important;
+    box-sizing: border-box !important;
+    font-size: 14px !important;
+    //border-radius: 25px !important;
+    line-height: 1.2;
+}
+
+.custom-flat-file {
+    outline: 0 !important;
+    background: $input-background !important;
+    width: 100% !important;
+    height: 50px !important;
+    border: 0 !important;
+    margin: 0px 0 12px 0 !important;
+    //padding: 15px !important;
+    box-sizing: border-box !important;
+    font-size: 14px !important;
+    //border-radius: 25px !important;
+    line-height: 1.2;
+}
+
 .custom-flat-input-error {
     border: 1 !important;
-    border-color: $red !important;
+    border-color: 1px solid$red !important;
 }
 
 .btn-custom-flat{
@@ -133,6 +161,21 @@ label {
     font-size: 16px !important;
     color: $cutom-flat-label !important;
     text-transform: capitalize !important;
+}
+
+
+/**
+* @ NProgress
+**/
+#nprogress .bar {
+    height:4px !important;
+}
+#nprogress .bar {
+    background: $secondary !important;
+}
+  
+#nprogress .spinner-icon {
+  display: none !important;
 }
 
 
