--- a/public/css/app.css
+++ b/public/css/app.css
@@ -125,6 +125,30 @@ label {
   line-height: 1.2;
 }
 
+.custom-flat-input-modal {
+  outline: 0 !important;
+  background: #f2f2f2 !important;
+  width: 100% !important;
+  border: 0 !important;
+  margin: 0 0 5px !important;
+  padding: 10px !important;
+  box-sizing: border-box !important;
+  font-size: 14px !important;
+  line-height: 1.2;
+}
+
+.custom-flat-input-disabled {
+  outline: 0 !important;
+  background: #bababa !important;
+  width: 100% !important;
+  border: 0 !important;
+  margin: 0 0 5px !important;
+  padding: 15px !important;
+  box-sizing: border-box !important;
+  font-size: 14px !important;
+  line-height: 1.2;
+}
+
 .custom-flat-select {
   outline: 0 !important;
   background: #f2f2f2 !important;
@@ -144,6 +168,18 @@ label {
   height: 50px !important;
   border: 0 !important;
   margin: 0px 0 12px 0 !important;
+  box-sizing: border-box !important;
+  font-size: 14px !important;
+  line-height: 1.2;
+}
+
+.custom-flat-textarea {
+  outline: 0 !important;
+  background: #f2f2f2 !important;
+  width: 100% !important;
+  border: 0 !important;
+  margin: 0 0 5px !important;
+  padding: 15px !important;
   box-sizing: border-box !important;
   font-size: 14px !important;
   line-height: 1.2;
