--- a/resources/sass/_custom.scss
+++ b/resources/sass/_custom.scss
@@ -119,6 +119,36 @@ label {
     line-height: 1.2;
 }
 
+.custom-flat-input-modal {
+    //background-color: #000;
+    //font-family: "Roboto", sans-serif;
+    outline: 0 !important;
+    background: $input-background !important;
+    width: 100% !important;
+    border: 0 !important;
+    margin: 0 0 5px !important;
+    padding: 10px !important;
+    box-sizing: border-box !important;
+    font-size: 14px !important;
+    //border-radius: 25px !important;
+    line-height: 1.2;
+}
+
+.custom-flat-input-disabled {
+    //background-color: #000;
+    //font-family: "Roboto", sans-serif;
+    outline: 0 !important;
+    background: $input-background-disabled !important;
+    width: 100% !important;
+    border: 0 !important;
+    margin: 0 0 5px !important;
+    padding: 15px !important;
+    box-sizing: border-box !important;
+    font-size: 14px !important;
+    //border-radius: 25px !important;
+    line-height: 1.2;
+}
+
 .custom-flat-select {
     outline: 0 !important;
     background: $input-background !important;
@@ -141,6 +171,22 @@ label {
     border: 0 !important;
     margin: 0px 0 12px 0 !important;
     //padding: 15px !important;
+    box-sizing: border-box !important;
+    font-size: 14px !important;
+    //border-radius: 25px !important;
+    line-height: 1.2;
+}
+
+
+.custom-flat-textarea {
+    //background-color: #000;
+    //font-family: "Roboto", sans-serif;
+    outline: 0 !important;
+    background: $input-background !important;
+    width: 100% !important;
+    border: 0 !important;
+    margin: 0 0 5px !important;
+    padding: 15px !important;
     box-sizing: border-box !important;
     font-size: 14px !important;
     //border-radius: 25px !important;
