--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -30,4 +30,5 @@ $secondary: #129D9E;
 
 // Custom Flat input
 $input-background: #f2f2f2;
+$input-background-disabled: #bababa;
 $cutom-flat-label: #555;
