Employer Flat Style

--- a/resources/sass/_custom.scss
+++ b/resources/sass/_custom.scss
@@ -165,7 +165,7 @@ label {
 
 .custom-flat-file {
     outline: 0 !important;
-    background: $input-background !important;
+    // /background: $input-background !important;
     width: 100% !important;
     height: 50px !important;
     border: 0 !important;
