--- a/public/css/app.css
+++ b/public/css/app.css
@@ -109,6 +109,11 @@ label {
   background-color: transparent !important;
 }
 
+.carousel {
+  width: 100%;
+  height: 365px !important;
+}
+
 /**
 * @ Custom Flat Design Design
 **/
