--- a/resources/sass/_custom.scss
+++ b/resources/sass/_custom.scss
@@ -99,7 +99,11 @@ label {
 .custom-table-input {
     border: none !important;
     background-color: transparent !important;
-}
+} 
+.carousel {
+    width:100%;
+    height:365px !important;
+  }
 
 /**
 * @ Custom Flat Design Design
